# Website-Builder

./: .gitignore  README.md  pyproject.toml  report.md
db/: chroma.sqlite3
src/website_builder/: crew.py  main.py
website_builder/: pyproject.toml  pytest.ini
website_builder/db/: chroma.sqlite3
website_builder/src/website_builder/: crew.py  main.py
website_builder/src/website_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
website_builder/src/website_builder/config/: agents.yaml  tasks.yaml
website_builder/src/website_builder/templates/: base.css  base.html  base.js
website_builder/src/website_builder/utils/: __init__.py  config_validator.py  file_manager.py
website_builder/tests/: __init__.py  conftest.py  test_config_validator.py  test_file_manager.py  test_main.py
