[project]
name = "website_builder"
version = "0.1.0"
description = "website_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
website_builder = "website_builder.main:run"
run_crew = "website_builder.main:run"
train = "website_builder.main:train"
replay = "website_builder.main:replay"
test = "website_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
